{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 80,
  "lineage": "2a1f137f-0525-db81-2a41-a5241bc7f215",
  "resources": [
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d99b50fbf99aebe2",
            "arn": "arn:aws:ec2:us-east-1:888577031487:elastic-ip/eipalloc-0d99b50fbf99aebe2",
            "domain": "vpc",
            "id": "eipalloc-0d99b50fbf99aebe2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-162-4-171.compute-1.amazonaws.com",
            "public_ip": "54.162.4.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09435694590d21111",
            "arn": "arn:aws:ec2:us-east-1:888577031487:elastic-ip/eipalloc-09435694590d21111",
            "domain": "vpc",
            "id": "eipalloc-09435694590d21111",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-23-65-57.compute-1.amazonaws.com",
            "public_ip": "52.23.65.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:internet-gateway/igw-0f7c9038a249be653",
            "id": "igw-0f7c9038a249be653",
            "owner_id": "888577031487",
            "tags": {
              "Name": "igw_main"
            },
            "tags_all": {
              "Name": "igw_main"
            },
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d99b50fbf99aebe2",
            "association_id": "eipassoc-07d8948b442425bb0",
            "connectivity_type": "public",
            "id": "nat-05f96886513ed5e90",
            "network_interface_id": "eni-03f9735a8acd7f763",
            "private_ip": "10.0.0.33",
            "public_ip": "54.162.4.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ae026617f7cab63",
            "tags": {
              "Name": "gw NAT1"
            },
            "tags_all": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09435694590d21111",
            "association_id": "eipassoc-027a5346e9e606879",
            "connectivity_type": "public",
            "id": "nat-05d7049b9fb1412aa",
            "network_interface_id": "eni-03d99d71d428c8a76",
            "private_ip": "10.0.1.199",
            "public_ip": "52.23.65.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-005ed5f2dd9ab3d01",
            "tags": {
              "Name": "gw NAT2"
            },
            "tags_all": {
              "Name": "gw NAT2"
            }
          },
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:route-table/rtb-04d1d4f238d2e0cc2",
            "id": "rtb-04d1d4f238d2e0cc2",
            "owner_id": "888577031487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f96886513ed5e90",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1_route_table"
            },
            "tags_all": {
              "Name": "private1_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw1",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:route-table/rtb-0da0ed0ae22e06734",
            "id": "rtb-0da0ed0ae22e06734",
            "owner_id": "888577031487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d7049b9fb1412aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2_route_table"
            },
            "tags_all": {
              "Name": "private2_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw2",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:route-table/rtb-0549bae4e9b3022de",
            "id": "rtb-0549bae4e9b3022de",
            "owner_id": "888577031487",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7c9038a249be653",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9fcff9c1a0b5616",
            "route_table_id": "rtb-04d1d4f238d2e0cc2",
            "subnet_id": "subnet-09063a511f673e1bd"
          },
          "dependencies": [
            "module.network_module.aws_eip.nat1",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw1",
            "module.network_module.aws_route_table.private1_route_table",
            "module.network_module.aws_subnet.private_us_east_1a",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d50929c300c34279",
            "route_table_id": "rtb-0da0ed0ae22e06734",
            "subnet_id": "subnet-0822bef3e75813d6e"
          },
          "dependencies": [
            "module.network_module.aws_eip.nat2",
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_nat_gateway.nat_gw2",
            "module.network_module.aws_route_table.private2_route_table",
            "module.network_module.aws_subnet.private_us_east_1b",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbc93b59d1a07882",
            "route_table_id": "rtb-0549bae4e9b3022de",
            "subnet_id": "subnet-05ae026617f7cab63"
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_route_table.public_route_table",
            "module.network_module.aws_subnet.public_us_east_1a",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a418311b7b791677",
            "route_table_id": "rtb-0549bae4e9b3022de",
            "subnet_id": "subnet-005ed5f2dd9ab3d01"
          },
          "dependencies": [
            "module.network_module.aws_internet_gateway.igw_main",
            "module.network_module.aws_route_table.public_route_table",
            "module.network_module.aws_subnet.public_us_east_1b",
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:subnet/subnet-09063a511f673e1bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09063a511f673e1bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888577031487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:subnet/subnet-0822bef3e75813d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822bef3e75813d6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888577031487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:subnet/subnet-05ae026617f7cab63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ae026617f7cab63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577031487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:subnet/subnet-005ed5f2dd9ab3d01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005ed5f2dd9ab3d01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577031487",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d3febc1d60e2492b"
          },
          "dependencies": [
            "module.network_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888577031487:vpc/vpc-0d3febc1d60e2492b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063a1e681d436d288",
            "default_route_table_id": "rtb-03daac0e3c2a35f40",
            "default_security_group_id": "sg-0202c88f75f59cffe",
            "dhcp_options_id": "dopt-0dfc0fb044de3ad61",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d3febc1d60e2492b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03daac0e3c2a35f40",
            "owner_id": "888577031487",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}